@@ -27,7 +27,6 @@ namespace versionstring {
 CUPT_API extern char idSuffixDelimiter;
 
 CUPT_API StringRange getOriginal(const StringRange& versionString);
-bool sameOriginal(const string& leftVersionString, const string& rightVersionString);
 
 }
 }
